travel plan is done

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div id="wrap">
 			<div class="content">
 				<h1>伊豆旅行</h1>
-				<p>約半年ぶりの旅行、あシンガポールから帰国して以来あ、コロナの影響で遠くへの旅行もありしばらく行わなかった旅行...<br>半年の時を経てGo To トラベルの後押しもあり決定した旅行!しかし、さゆの簿記の試験がある中本当に行って大丈夫なのだろうか...</p>
+				<p>約半年ぶりの旅行、シンガポールから帰国して以来、コロナの影響で遠くへの旅行もありしばらく行わなかった旅行...<br>半年の時を経てGo To トラベルの後押しもあり決定した旅行!しかし、さゆの簿記の試験がある中本当に行って大丈夫なのだろうか...</p>
 				<div class="day_btn">
 					<p class="btn"><a href="first.html" alt="day1">day : 1</a></p>
 					<p class="btn"><a href="second.html" alt="day2">day : 2</a></p>
